<resources>
    <string name="app_name">La Pequeña Calculadora</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="titulo">La Pequeña Calculadora</string>
    <string name="operando1">operando1</string>
    <string name="calc">Calcular</string>
    <string name="operando2">operando2</string>

    <string name="suma">suma</string>
    <string name="resta">resta</string>
    <string name="mult">multiplicacón</string>
    <string name="div">división</string>
    <string name="resul">Resultado:</string>
    
    <string name="result">XxXxX</string>

</resources>
