<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/lightblue">

    <!--Titulo-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:gravity="center"
        android:textSize="40dp"
        android:layout_weight="1"/>

    <!--Operandos-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="2">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eOperand1"
            android:hint="@string/operando1"
            android:digits="1234567890-"
            android:textSize="30dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eOperand2"
            android:hint="@string/operando2"
            android:digits="1234567890-"
            android:textSize="30dp"/>
    </LinearLayout>

    <!--operaciones-->
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/suma"
                android:id="@+id/rSuma"
                android:textSize="30dp"
                android:onClick="OnRadioButtonClicked"
                android:layout_gravity="center"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resta"
                android:id="@+id/rRes"
                android:textSize="30dp"
                android:onClick="OnRadioButtonClicked"
                android:layout_gravity="center"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30dp"
                android:text="@string/mult"
                android:id="@+id/rMult"
                android:onClick="OnRadioButtonClicked"
                android:layout_gravity="center"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/div"
                android:id="@+id/rDiv"
                android:textSize="30dp"
                android:onClick="OnRadioButtonClicked"
                android:layout_gravity="center"/>

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_gravity="center">

        <!--botonCalcular-->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc"
            android:textSize="20dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:id="@+id/bCalc"/>

        <!--Resultado-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resul"
                android:textSize="25dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tResult"
                android:hint="@string/result"
                android:textSize="30dp"/>
        </LinearLayout>
        </LinearLayout>

</LinearLayout>